# rca-project

./: README.md  docker-compose.yml
backend/: app.py  pyproject.toml
backend/tests/: test_api.py
checks/: test_integration.py
docs/: report.json
frontend/: Dockerfile  package.json
frontend/src/: App.js  App.test.js
frontend/src/components/: Stats.js
