[project]
name = "task-manager-backend"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "S", "T20"]
ignore = ["S104", "S603", "S608"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B104"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 50
